Added code to weak work and filler words

--- a/templates/admin/interview_analyzer/view_report.html
+++ b/templates/admin/interview_analyzer/view_report.html
@@ -14,7 +14,7 @@
     <!-- Sidebar -->
     <div id="sidebar-wrapper">
 
-      <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-vnbyu8" id="menu-toggle-out" tabindex="0" type="button" aria-label="Toggle Insights"><svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 4L10 7L-3.93402e-07 7L-3.0598e-07 9L10 9L10 12L14 8L10 4ZM16 16L18 16L18 -7.86805e-07L16 -6.99382e-07L16 16Z" fill="currentColor"></path></svg><span class="MuiTouchRipple-root css-w0pj6f"></span></button>
+      <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-vnbyu8" id="menu-toggle-out" tabindex="0" type="button" aria-label="Toggle Insights"><svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 4L10 7L-3.93402e-07 7L-3.0598e-07 9L10 9L10 12L14 8L10 4ZM16 16L18 16L18 -7.86805e-07L16 -6.99382e-07L16 16Z" fill="#EA1B3D"></path></svg><span class="MuiTouchRipple-root css-w0pj6f"></span></button>
       <script>
 
     $("#menu-toggle-out").click(function(e) {
@@ -48,34 +48,137 @@
     });
 
     </script>
+    <span>
+      <div class="css-5277k6 "><span class="MuiButton-startIcon MuiButton-iconSizeMedium css-1l6c7y9"><div class="MuiBox-root css-1l29ab3"><svg viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 14px; height: 14px;"><path d="M1.2 3.6H1.37143C2.03143 3.6 2.57143 4.14 2.57143 4.8V10.8C2.57143 11.46 2.03143 12 1.37143 12H1.2C0.54 12 0 11.46 0 10.8V4.8C0 4.14 0.54 3.6 1.2 3.6ZM6 0C6.66 0 7.2 0.54 7.2 1.2V10.8C7.2 11.46 6.66 12 6 12C5.34 12 4.8 11.46 4.8 10.8V1.2C4.8 0.54 5.34 0 6 0ZM10.8 6.85714C11.46 6.85714 12 7.39714 12 8.05714V10.8C12 11.46 11.46 12 10.8 12C10.14 12 9.6 11.46 9.6 10.8V8.05714C9.6 7.39714 10.14 6.85714 10.8 6.85714Z" fill="#fff"></path></svg></div></span><span class="space-icon" style="padding:1%;color:#fff;font-weight: 500;font-size: 20px;">Analytics</span><span class="MuiTouchRipple-root css-w0pj6f"></span></div>
+    </span>
+<!--      <button class="css-5277k6 MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation css-jjm1e4" tabindex="0" type="button"><span class="MuiButton-startIcon MuiButton-iconSizeMedium css-1l6c7y9"><div class="MuiBox-root css-1l29ab3"><svg viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 14px; height: 14px;"><path d="M1.2 3.6H1.37143C2.03143 3.6 2.57143 4.14 2.57143 4.8V10.8C2.57143 11.46 2.03143 12 1.37143 12H1.2C0.54 12 0 11.46 0 10.8V4.8C0 4.14 0.54 3.6 1.2 3.6ZM6 0C6.66 0 7.2 0.54 7.2 1.2V10.8C7.2 11.46 6.66 12 6 12C5.34 12 4.8 11.46 4.8 10.8V1.2C4.8 0.54 5.34 0 6 0ZM10.8 6.85714C11.46 6.85714 12 7.39714 12 8.05714V10.8C12 11.46 11.46 12 10.8 12C10.14 12 9.6 11.46 9.6 10.8V8.05714C9.6 7.39714 10.14 6.85714 10.8 6.85714Z" fill="#6966FD"></path></svg></div></span>Analytics<span class="MuiTouchRipple-root css-w0pj6f"></span></button>-->
 
-        <div class="css-5277k6 "><p class="MuiTypography-root MuiTypography-body1 css-11pse9l">SANDEEP KUMAR GUPTA's Speaking Insights</p></div>
-    <div class="css-1gc0uv4 parent-container">
-      <div class="css-9qrd19">
-        <button class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation css-1q1t9mv" tabindex="0" type="button"><span class="MuiButton-startIcon MuiButton-iconSizeMedium css-1l6c7y9"><div class="MuiBox-root css-1o4lo4k"><svg viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 14px; height: 14px;"><path d="M1.2 3.6H1.37143C2.03143 3.6 2.57143 4.14 2.57143 4.8V10.8C2.57143 11.46 2.03143 12 1.37143 12H1.2C0.54 12 0 11.46 0 10.8V4.8C0 4.14 0.54 3.6 1.2 3.6ZM6 0C6.66 0 7.2 0.54 7.2 1.2V10.8C7.2 11.46 6.66 12 6 12C5.34 12 4.8 11.46 4.8 10.8V1.2C4.8 0.54 5.34 0 6 0ZM10.8 6.85714C11.46 6.85714 12 7.39714 12 8.05714V10.8C12 11.46 11.46 12 10.8 12C10.14 12 9.6 11.46 9.6 10.8V8.05714C9.6 7.39714 10.14 6.85714 10.8 6.85714Z" fill="#EA1B3D"></path></svg></div></span>Analytics<span class="MuiTouchRipple-root css-w0pj6f"></span></button></div></div>
-          {% if analysis_data %}
-              {% for key,words in analysis_data %}
-              <h2>{{ key }}</h2>
-              <div class="content-container added-accordion-css">
-                    <div class="question">Weak Words</div>
-                    <div class="answer">
-                        {% for weak in words['weak_words'] %}
-                            <span class="badge btn-danger words_rounded" style="border-radius: 20px !important;background-color: #dddddd;color: #000000;"><span style="background-color: #fff;border-radius: 50%;padding: 2px 10px;height: 5px;margin-right: 10px;">{{ weak['count'] }}</span> {{ weak['word'] }}</span>
-                        {% endfor %}
-                    </div>
-               </div>
-               <div class="content-container added-accordion-css">
-                 <div class="question">Filler Words</div>
-                    <div class="answer">
-                        {% for filler in words['filler_words'] %}
-                            <span class="badge btn-danger words_rounded" style="border-radius: 20px !important;background-color: #dddddd;color: #000000;"><span style="background-color: #fff;border-radius: 50%;padding: 2px 10px;height: 5px;margin-right: 10px;">{{ filler['count'] }}</span> {{ filler['word'] }}</span>
-                        {% endfor %}
-                    </div>
-                </div>
-              {% endfor %}
+<div class="tabs">
+  <div class="tab-2">
+    <label for="tab2-1">Interviewer</label>
+    <input id="tab2-1" name="tabs-two" type="radio" checked="checked">
+    <div>
+      <div class="card-body">
+          <div class="col-md mb-4 mb-md-0">
+             {% if analysis_data %}
+                         {% for key,words in analysis_data %}
+                             {% if key == 'Interviewer Analysis' %}
+            <div class="accordion mt-3" id="question_answer_accordion">
+             <div class="card accordion-item-sidebar">
+                <h2 class="accordion-header" id="heading_{{ index }}">
 
-          {% endif %}
+                  <button type="button" class="accordion-button" data-bs-toggle="collapse"
+                    data-bs-target="#accordion1" aria-expanded="false" aria-controls="accordion1">
+                    <i class="fa fa-history" aria-hidden="true" style="color: #aa142d"></i>&nbsp;
+                      Weak Words <span class="badge btn-danger words_rounded" style="margin-left: 74%;"> {{ words['weak_words'] | count }}</span>
+                  </button>
+                </h2>
+            <div id="accordion1" class="accordion-collapse collapse show add-extra-css"
+              data-bs-parent="#question_answer_accordion" aria-labelledby="heading_{{ index }}">
+              <div class="accordion-body">
+                 {% for weak in words['weak_words'] %}
+                            <span class="badge btn-danger words_rounded" style="font-size:14px;text-transform: none;line-height:1; border-radius: 20px !important;background-color: #676775;color: #fff;"><span style="background-color: #fff;border-radius: 50%;padding: 2px 10px;height: 5px;color:#373742;">{{ weak['count'] }}</span> {{ weak['word'] }}</span>
+                        {% endfor %}
+
+              </div>
+            </div>
+        </div>
+
       </div>
+
+
+              <div class="accordion mt-3" id="question_answer_accordion">
+             <div class="card accordion-item-sidebar">
+                <h2 class="accordion-header" id="heading_{{ index }}">
+
+                  <button type="button" class="accordion-button collapsed" data-bs-toggle="collapse"
+                    data-bs-target="#accordion2" aria-expanded="false" aria-controls="accordion2">
+                    <i class="fa fa-map-signs" aria-hidden="true" style="color: #aa142d"></i>&nbsp;
+                      Filler Words  <span class="badge btn-danger words_rounded" style="margin-left: 75%;">{{ words['filler_words'] | count }}</span>
+                  </button>
+                </h2>
+            <div id="accordion2" class="accordion-collapse collapse add-extra-css"
+              data-bs-parent="#question_answer_accordion" aria-labelledby="heading_{{ index }}">
+              <div class="accordion-body">
+
+                 {% for filler in words['filler_words'] %}
+                            <span class="badge btn-danger words_rounded" style="font-size:14px;text-transform: none;line-height:1; border-radius: 20px !important;background-color: #676775;color: #fff;"><span style="background-color: #fff;border-radius: 50%;padding: 2px 10px;height: 5px;color:#373742;">{{ filler['count'] }}</span> {{ filler['word'] }}</span>
+                        {% endfor %}
+              </div>
+            </div>
+        </div>
+
+      </div>
+             {% endif %}
+            {% endfor %}
+ {% endif %}
+    </div>
+      </div>
+    </div>
+  </div>
+  <div class="tab-2">
+    <label for="tab2-2">Candidate</label>
+    <input id="tab2-2" name="tabs-two" type="radio">
+    <div>
+      <div class="card-body">
+          <div class="col-md mb-4 mb-md-0">
+             {% if analysis_data %}
+                         {% for key,words in analysis_data %}
+                            {% if key == 'Candidate Analysis' %}
+            <div class="accordion mt-3" id="question_answer_accordion">
+             <div class="card accordion-item-sidebar">
+                <h2 class="accordion-header" id="heading_{{ index }}">
+
+                  <button type="button" class="accordion-button" data-bs-toggle="collapse"
+                    data-bs-target="#accordion3" aria-expanded="false" aria-controls="accordion3">
+                    <i class="fa fa-history" aria-hidden="true" style="color: #aa142d"></i>&nbsp;
+                      Weak Words <span class="badge btn-danger words_rounded" style="margin-left: 74%;"> {{ words['weak_words'] | count }}</span>
+                  </button>
+                </h2>
+            <div id="accordion3" class="accordion-collapse collapse show add-extra-css"
+              data-bs-parent="#question_answer_accordion" aria-labelledby="heading_{{ index }}">
+              <div class="accordion-body">
+                 {% for weak in words['weak_words'] %}
+                            <span class="badge btn-danger words_rounded" style="font-size:14px;text-transform: none;line-height:1; border-radius: 20px !important;background-color: #676775;color: #fff;"><span style="background-color: #fff;border-radius: 50%;padding: 2px 10px;height: 5px;color:#373742;">{{ weak['count'] }}</span> {{ weak['word'] }}</span>
+                        {% endfor %}
+
+              </div>
+            </div>
+        </div>
+
+      </div>
+
+
+              <div class="accordion mt-3" id="question_answer_accordion">
+             <div class="card accordion-item-sidebar">
+                <h2 class="accordion-header" id="heading_{{ index }}">
+
+                  <button type="button" class="accordion-button collapsed" data-bs-toggle="collapse"
+                    data-bs-target="#accordion4" aria-expanded="false" aria-controls="accordion4">
+                    <i class="fa fa-map-signs" aria-hidden="true" style="color: #aa142d"></i>&nbsp;
+                    Filler Words <span class="badge btn-danger words_rounded" style="margin-left: 75%;">{{ words['filler_words'] | count }}</span>
+                  </button>
+                </h2>
+            <div id="accordion4" class="accordion-collapse collapse add-extra-css"
+              data-bs-parent="#question_answer_accordion" aria-labelledby="heading_{{ index }}">
+              <div class="accordion-body">
+                 {% for filler in words['filler_words'] %}
+                            <span class="badge btn-danger words_rounded" style="font-size:14px;text-transform: none;line-height:1; border-radius: 20px !important;background-color: #676775;color: #fff;"><span style="background-color: #fff;border-radius: 50%;padding: 2px 10px;height: 5px;color:#373742;">{{ filler['count'] }}</span> {{ filler['word'] }}</span>
+                        {% endfor %}
+              </div>
+            </div>
+        </div>
+
+      </div>
+            {% endif %}
+            {% endfor %}
+
+ {% endif %}
+    </div>
+      </div>
+    </div>
+
+
     </div>
     <!-- /#sidebar-wrapper -->
   </div>
