--- a/static/assets/css/details_report.css
+++ b/static/assets/css/details_report.css
@@ -511,8 +511,9 @@ padding: 10px 0px 10px 10px;
     justify-content: center;
     padding-top: 16px;
     padding-bottom: 16px;
-    background: linear-gradient(71.49deg, rgb(219, 243, 253) -9.87%, rgb(222, 221, 255) 79.01%);
+    background: linear-gradient(71.49deg, rgb(55, 55, 66) -9.87%, rgb(103,103,117) 79.01%);
     color: rgb(4, 3, 72);
+    padding:2%;
 }
 .header{
  padding-top:80px;
@@ -550,7 +551,38 @@ padding: 10px 0px 10px 10px;
     inset: 0px;
     border-radius: inherit;
 }
+.css-jjm1e4 {
+    display: inline-flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    position: relative;
+    box-sizing: border-box;
+    -webkit-tap-highlight-color: transparent;
+    outline: 0px;
+    border: 0px;
+    margin: 0px;
+    cursor: pointer;
+    user-select: none;
+    vertical-align: middle;
+    appearance: none;
+    text-decoration: none;
+    box-shadow: none;
+    width: fit-content;
+    min-width: unset;
+    line-height: 1.3;
+    padding: 8px 1em;
+    transition: all 0.2s ease-in-out 0s;
 
+    text-transform: none;
+    border-radius: 50px;
+    font-size: 15px;
+    font-weight: 400;
+    background-color: transparent;
+    color: rgb(4, 3, 72);
+    flex-basis: 50%;
+}
 .css-1q1t9mv {
     display: inline-flex;
     -webkit-box-align: center;
@@ -563,6 +595,7 @@ padding: 10px 0px 10px 10px;
     outline: 0px;
     border: 0px;
     margin: 0px;
+    cursor: pointer;
     user-select: none;
     vertical-align: middle;
     appearance: none;
@@ -570,16 +603,29 @@ padding: 10px 0px 10px 10px;
     width: fit-content;
     min-width: unset;
     line-height: 1.3;
-    padding: 16px 6em;
+    padding: 8px 1em;
+
     text-transform: none;
     border-radius: 50px;
     font-size: 15px;
     font-weight: 600;
     background-color: rgb(255, 255, 255);
-    color: rgba(234,27,61);
+    color: rgb(82, 79, 252);
     flex-basis: 50%;
-    box-shadow: rgba(234,27,61) 1px 2px 5px;
+    box-shadow: rgba(33, 37, 41, 0.16) 1px 2px 5px;
     transition: box-shadow 0.3s ease 0s;
+}
+.css-9qrd19 {
+    display: flex;
+    flex-direction: row;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-flex: 1;
+    flex-grow: 1;
+    background-color: rgb(246, 248, 255);
+    border-radius: 50px;
 }
 .css-1l6c7y9 {
     display: inherit;
@@ -636,4 +682,116 @@ padding: 10px 0px 10px 10px;
 
 .added-accordion-css{
 padding:2%;
+}
+
+.css-n776s {
+    line-height: normal;
+    position: relative;
+    top: 1px;
+}
+
+.css-1q1t9mv:hover {
+    background-color: rgb(255, 255, 255);
+    box-shadow: rgba(33, 37, 41, 0.16) 1px 2px 5px;
+}
+.css-1q1t9mv:hover {
+    filter: none;
+}
+.css-1q1t9mv:hover {
+    text-decoration: none;
+    background-color: rgba(82, 79, 252, 0.04);
+}
+
+
+.made-with {
+    background: #fd264f;
+    color: #000;
+    display: block;
+    font-size: 12px;
+    line-height: 1em;
+    margin: 0;
+    padding: 5px 110px;
+    position: fixed;
+    top: 20px;
+    right: -100px;
+    text-align: center;
+    text-decoration: none;
+    transform: rotate(45deg);
+}
+.documentation {
+    color: #fd264f;
+}
+button:focus,
+input:focus,
+textarea:focus,
+select:focus {
+  outline: none; }
+
+.tabs {
+  display: block;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin: 0;
+  overflow: hidden; }
+  .tabs [class^="tab"] label,
+  .tabs [class*=" tab"] label {
+  background: #E6E6ED;
+    color: #373450;
+    cursor: pointer;
+    display: block;
+    font-weight: 400;
+    line-height: 1em;
+    padding: 1rem 0;
+    text-align: center; }
+  .tabs [class^="tab"] [type="radio"],
+  .tabs [class*=" tab"] [type="radio"] {
+    border-bottom: 1px solid rgba(239, 237, 239, 0.5);
+    cursor: pointer;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    display: block;
+    width: 100%;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out; }
+    .tabs [class^="tab"] [type="radio"]:hover, .tabs [class^="tab"] [type="radio"]:focus,
+    .tabs [class*=" tab"] [type="radio"]:hover,
+    .tabs [class*=" tab"] [type="radio"]:focus {
+      border-bottom: 1px solid #fd264f; }
+    .tabs [class^="tab"] [type="radio"]:checked,
+    .tabs [class*=" tab"] [type="radio"]:checked {
+      border-bottom: 2px solid #fd264f; }
+    .tabs [class^="tab"] [type="radio"]:checked + div,
+    .tabs [class*=" tab"] [type="radio"]:checked + div {
+      opacity: 1; }
+    .tabs [class^="tab"] [type="radio"] + div,
+    .tabs [class*=" tab"] [type="radio"] + div {
+      display: block;
+      opacity: 0;
+      padding: 2rem 0;
+      width: 90%;
+      -webkit-transition: all 0.3s ease-in-out;
+      -moz-transition: all 0.3s ease-in-out;
+      -o-transition: all 0.3s ease-in-out;
+      transition: all 0.3s ease-in-out; }
+  .tabs .tab-2 {
+    width: 50%; }
+    .tabs .tab-2 [type="radio"] + div {
+      width: 200%;
+      margin-left: 200%; }
+    .tabs .tab-2 [type="radio"]:checked + div {
+      margin-left: 0; }
+    .tabs .tab-2:last-child [type="radio"] + div {
+      margin-left: 100%; }
+    .tabs .tab-2:last-child [type="radio"]:checked + div {
+      margin-left: -100%; }
+
+.add-extra-css{
+box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 4px -1px, rgba(0, 0, 0, 0.14) 0px 4px 5px 0px, rgba(0, 0, 0, 0.12) 0px 1px 10px 0px;
 }
