--- a/templates/admin/interview_analyzer/view_report.html
+++ b/templates/admin/interview_analyzer/view_report.html
@@ -376,7 +376,7 @@ for (let i = 0; i < accordion.length; i++) {
                   
                   <div>
                     <span><i class="fa fa-video-camera show-video-clip-interviewer" style="
-                    color: #b90015;font-size: 15px;" aria-hidden="true" title="Interviewer Timestamp clip" data-bs-toggle="modal"
+                    color: #b90015;font-size: 15px;" aria-hidden="true" title="Interviewer Timestamp clip (In Seconds): {{ video_process.start_duration|format_duration }}-{{ video_process.end_duration|format_duration }}" data-bs-toggle="modal"
                     data-bs-target="#vclipmodel-int" data-video-clip="{{video_report.video_process_id|get_timestamp_vclip_url }}"></i></span>
                     <br>
 
@@ -384,7 +384,7 @@ for (let i = 0; i < accordion.length; i++) {
                     <=((next_video_process.start_duration|int) + 3) and video_process.speaker=='candidate' and
                     video_process.start_duration !='0' ) %}
                     <span><i class="fa fa-video-camera show-video-clip-candidate" style="
-                      color: #10982c; font-size: 15px;" aria-hidden="true" title="Candidate Timestamp clip" data-bs-toggle="modal"
+                      color: #10982c; font-size: 15px;" aria-hidden="true" title="Candidate Timestamp clip (In Seconds): {{ video_process.start_duration|format_duration }}-{{ video_process.end_duration|format_duration }}" data-bs-toggle="modal"
                     data-bs-target="#vclipmodel-cand" data-video-clip="{{video_report.video_process_id|get_timestamp_vclip_url }}"></i></span></div>
                     <div class="candidate">
                     <i class="fa fa-info-circle icon-css" aria-hidden="true" title="Check Graph" data-bs-toggle="modal"
@@ -418,7 +418,7 @@ for (let i = 0; i < accordion.length; i++) {
             {% elif index == list_length and video_process.speaker ==
             'candidate' %}
             <span><i class="fa fa-video-camera show-video-clip-candidate" style="
-              color: #10982c; font-size: 15px;" aria-hidden="true" title="Candidate Timestamp clip" data-bs-toggle="modal"
+              color: #10982c; font-size: 15px;" aria-hidden="true" title="Candidate Timestamp clip(In Seconds): {{ video_process.start_duration|format_duration }}-{{ video_process.end_duration|format_duration }}" data-bs-toggle="modal"
             data-bs-target="#vclipmodel-cand" data-video-clip="{{video_report.video_process_id|get_timestamp_vclip_url }}"></i></span></div>
             <div class="candidate">
               <i class="fa fa-info-circle icon-css" aria-hidden="true" title="Check Graph" data-bs-toggle="modal"
