--- a/templates/admin/interview_analyzer/view_report.html
+++ b/templates/admin/interview_analyzer/view_report.html
@@ -352,7 +352,7 @@ for (let i = 0; i < accordion.length; i++) {
                     {% if video_process.interview_transcript=='NA' %}
                         Transcript Not Found
                     {% else %}
-                    {{video_process.interview_transcript }}
+                    {{video_process.interview_transcript|weak_word_identify|safe}}
                     {% endif %}
                   </button>
                 </h2>
@@ -398,7 +398,7 @@ for (let i = 0; i < accordion.length; i++) {
                   {% if video_process.interview_transcript=='NA' %}
                   Transcript Not Found
                 {% else %}
-                {{video_process.interview_transcript }}
+                {{video_process.interview_transcript|weak_word_identify|safe}}
                 {% endif %}
             
               </div>
@@ -429,7 +429,7 @@ for (let i = 0; i < accordion.length; i++) {
                 {% if video_process.interview_transcript=='NA' %}
                   Transcript Not Found
                 {% else %}
-                {{video_process.interview_transcript }}
+                {{video_process.interview_transcript|weak_word_identify|safe}}
                 {% endif %}
             </div>
           </div>
@@ -441,7 +441,7 @@ for (let i = 0; i < accordion.length; i++) {
               {% if video_process.interview_transcript=='NA' %}
               Transcript Not Found
             {% else %}
-            {{video_process.interview_transcript }}
+             {{video_process.interview_transcript|weak_word_identify|safe}}
             {% endif %}
             </div>
           </div>
