--- a/static/assets/css/details_report.css
+++ b/static/assets/css/details_report.css
@@ -161,6 +161,10 @@ h5 {
   order: 3;
 }
 
+.percentage-wrapper span {
+  font-weight: normal;
+}
+
 .percentage-wrapper .icon-css {
   color: #0d6efd;
   font-size: 15px;
@@ -265,116 +269,103 @@ div#chart-text {
   }
 }
 
-
-
 /*Sidebar CSS*/
 
 .accordion {
-
-    background-color: #fff;
-    border-radius: 5px;
-    color:white;
-
+  background-color: #fff;
+  border-radius: 5px;
+  color: white;
 }
 .css-vnbyu8 {
-margin-top:-6%!important;
-    display: inline-flex;
-    -webkit-box-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    justify-content: center;
-    box-sizing: border-box;
-    -webkit-tap-highlight-color: transparent;
-    outline: 0px;
-    border: 0px;
-    margin: 0px;
-    cursor: pointer;
-    user-select: none;
-    vertical-align: middle;
-    appearance: none;
-    text-decoration: none;
-    text-align: center;
-    flex: 0 0 auto;
-    font-size: 1.5rem;
-    border-radius: 50%;
-    overflow: visible;
-    transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-    color: rgb(82, 79, 252);
-    background-color: rgb(255, 255, 255);
-    position: absolute;
-    height: 40px;
-    width: 40px;
-    top: 77px;
-    left: 20px;
-    padding: 12px;
-    box-shadow: rgba(33, 37, 41, 0.15) 1px 2px 7px;
+  margin-top: -6% !important;
+  display: inline-flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+  outline: 0px;
+  border: 0px;
+  margin: 0px;
+  cursor: pointer;
+  user-select: none;
+  vertical-align: middle;
+  appearance: none;
+  text-decoration: none;
+  text-align: center;
+  flex: 0 0 auto;
+  font-size: 1.5rem;
+  border-radius: 50%;
+  overflow: visible;
+  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  color: rgb(82, 79, 252);
+  background-color: rgb(255, 255, 255);
+  position: absolute;
+  height: 40px;
+  width: 40px;
+  top: 77px;
+  left: 20px;
+  padding: 12px;
+  box-shadow: rgba(33, 37, 41, 0.15) 1px 2px 7px;
 }
 .css-11pse9l {
-    margin: 0px;
+  margin: 0px;
 
-    line-height: 1.5;
-    color: inherit;
-    font-size: 12px;
-    font-weight: 400;
-    letter-spacing: 1px;
-    text-transform: uppercase;
+  line-height: 1.5;
+  color: inherit;
+  font-size: 12px;
+  font-weight: 400;
+  letter-spacing: 1px;
+  text-transform: uppercase;
 }
 .accordion .accordion-title {
-
-    margin-bottom: 28px;
-    text-align: center;
+  margin-bottom: 28px;
+  text-align: center;
 }
 
 .accordion .content-container .question {
-
-padding: 10px 0px 10px 10px;
-    font-size: 20px;
-    cursor: pointer;
-    border: 2px solid rgba(67, 89, 113, 0.1);
-    color: #000;
-    position: relative;
-    transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-        box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 4px -1px, rgba(0, 0, 0, 0.14) 0px 4px 5px 0px, rgba(0, 0, 0, 0.12) 0px 1px 10px 0px;
+  padding: 10px 0px 10px 10px;
+  font-size: 20px;
+  cursor: pointer;
+  border: 2px solid rgba(67, 89, 113, 0.1);
+  color: #000;
+  position: relative;
+  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 4px -1px,
+    rgba(0, 0, 0, 0.14) 0px 4px 5px 0px, rgba(0, 0, 0, 0.12) 0px 1px 10px 0px;
 }
 
 .accordion .content-container .question::after {
-
-    content: '+';
-    position: absolute;
-    right: 10px;
+  content: "+";
+  position: absolute;
+  right: 10px;
 }
 
 .accordion .content-container .answer {
-
-    padding-top: 5px;
-    line-height: 1.4;
-    font-size: 20px;
-    color:#000;
-    height: 0px;
-    overflow: hidden;
-    transition: .5s;
-
-
+  padding-top: 5px;
+  line-height: 1.4;
+  font-size: 20px;
+  color: #000;
+  height: 0px;
+  overflow: hidden;
+  transition: 0.5s;
 }
 
 .accordion .content-container.active .answer {
-
-    height: 100px;
+  height: 100px;
 }
 
 .accordion .content-container.active .question {
-
-    font-size: 18px;
-    transition: .5s;
+  font-size: 18px;
+  transition: 0.5s;
 }
 
 .accordion .content-container.active .question::after {
-
-    content: '-';
-    font-size: 35px;
-    transform: translateY(-20%);
-    transition: .5s;
-
+  content: "-";
+  font-size: 35px;
+  transform: translateY(-20%);
+  transition: 0.5s;
 }
 #wrapper {
   padding-right: 0;
@@ -389,7 +380,7 @@ padding: 10px 0px 10px 10px;
 }
 
 #sidebar-wrapper {
-  margin-top:-4.6%;
+  margin-top: -4.6%;
   z-index: 1000;
   position: fixed;
   right: 250px;
@@ -403,7 +394,8 @@ padding: 10px 0px 10px 10px;
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease;
   transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 4px -1px, rgba(0, 0, 0, 0.14) 0px 4px 5px 0px, rgba(0, 0, 0, 0.12) 0px 1px 10px 0px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 4px -1px,
+    rgba(0, 0, 0, 0.14) 0px 4px 5px 0px, rgba(0, 0, 0, 0.12) 0px 1px 10px 0px;
 }
 
 #wrapper.toggled #sidebar-wrapper {
@@ -492,38 +484,40 @@ padding: 10px 0px 10px 10px;
   }
 }
 
-* New styles to align the button to the right */
-.title-container {
+* New styles to align the button to the right */ .title-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px;
   background: #333; /* You can adjust the background color */
   color: #fff; /* Text color */
-
 }
 .css-5277k6 {
-    display: flex;
-    flex-direction: row;
-    -webkit-box-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    justify-content: center;
-    padding-top: 16px;
-    padding-bottom: 16px;
-    background: linear-gradient(71.49deg, rgb(55, 55, 66) -9.87%, rgb(103,103,117) 79.01%);
-    color: rgb(4, 3, 72);
-    padding:2%;
+  display: flex;
+  flex-direction: row;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  background: linear-gradient(
+    71.49deg,
+    rgb(55, 55, 66) -9.87%,
+    rgb(103, 103, 117) 79.01%
+  );
+  color: rgb(4, 3, 72);
+  padding: 2%;
 }
-.header{
- padding-top:80px;
+.header {
+  padding-top: 80px;
 }
 .title-container h2 {
   margin: 0;
 }
 
 .btn-secondary {
-  background: #73742!important; /* Button background color */
+  background: #73742 !important; /* Button background color */
   color: #fff; /* Button text color */
   border: none;
   padding: 5px 10px;
@@ -544,134 +538,132 @@ padding: 10px 0px 10px 10px;
   margin-left: 10px; /* Adjust the margin as needed for spacing */
 }
 .css-w0pj6f {
-    overflow: hidden;
-    pointer-events: none;
-    position: absolute;
-    z-index: 0;
-    inset: 0px;
-    border-radius: inherit;
+  overflow: hidden;
+  pointer-events: none;
+  position: absolute;
+  z-index: 0;
+  inset: 0px;
+  border-radius: inherit;
 }
 .css-jjm1e4 {
-    display: inline-flex;
-    -webkit-box-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    justify-content: center;
-    position: relative;
-    box-sizing: border-box;
-    -webkit-tap-highlight-color: transparent;
-    outline: 0px;
-    border: 0px;
-    margin: 0px;
-    cursor: pointer;
-    user-select: none;
-    vertical-align: middle;
-    appearance: none;
-    text-decoration: none;
-    box-shadow: none;
-    width: fit-content;
-    min-width: unset;
-    line-height: 1.3;
-    padding: 8px 1em;
-    transition: all 0.2s ease-in-out 0s;
+  display: inline-flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  position: relative;
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+  outline: 0px;
+  border: 0px;
+  margin: 0px;
+  cursor: pointer;
+  user-select: none;
+  vertical-align: middle;
+  appearance: none;
+  text-decoration: none;
+  box-shadow: none;
+  width: fit-content;
+  min-width: unset;
+  line-height: 1.3;
+  padding: 8px 1em;
+  transition: all 0.2s ease-in-out 0s;
 
-    text-transform: none;
-    border-radius: 50px;
-    font-size: 15px;
-    font-weight: 400;
-    background-color: transparent;
-    color: rgb(4, 3, 72);
-    flex-basis: 50%;
+  text-transform: none;
+  border-radius: 50px;
+  font-size: 15px;
+  font-weight: 400;
+  background-color: transparent;
+  color: rgb(4, 3, 72);
+  flex-basis: 50%;
 }
 .css-1q1t9mv {
-    display: inline-flex;
-    -webkit-box-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    justify-content: center;
-    position: relative;
-    box-sizing: border-box;
-    -webkit-tap-highlight-color: transparent;
-    outline: 0px;
-    border: 0px;
-    margin: 0px;
-    cursor: pointer;
-    user-select: none;
-    vertical-align: middle;
-    appearance: none;
-    text-decoration: none;
-    width: fit-content;
-    min-width: unset;
-    line-height: 1.3;
-    padding: 8px 1em;
+  display: inline-flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  position: relative;
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+  outline: 0px;
+  border: 0px;
+  margin: 0px;
+  cursor: pointer;
+  user-select: none;
+  vertical-align: middle;
+  appearance: none;
+  text-decoration: none;
+  width: fit-content;
+  min-width: unset;
+  line-height: 1.3;
+  padding: 8px 1em;
 
-    text-transform: none;
-    border-radius: 50px;
-    font-size: 15px;
-    font-weight: 600;
-    background-color: rgb(255, 255, 255);
-    color: rgb(82, 79, 252);
-    flex-basis: 50%;
-    box-shadow: rgba(33, 37, 41, 0.16) 1px 2px 5px;
-    transition: box-shadow 0.3s ease 0s;
+  text-transform: none;
+  border-radius: 50px;
+  font-size: 15px;
+  font-weight: 600;
+  background-color: rgb(255, 255, 255);
+  color: rgb(82, 79, 252);
+  flex-basis: 50%;
+  box-shadow: rgba(33, 37, 41, 0.16) 1px 2px 5px;
+  transition: box-shadow 0.3s ease 0s;
 }
 .css-9qrd19 {
-    display: flex;
-    flex-direction: row;
-    -webkit-box-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    justify-content: center;
-    -webkit-box-flex: 1;
-    flex-grow: 1;
-    background-color: rgb(246, 248, 255);
-    border-radius: 50px;
+  display: flex;
+  flex-direction: row;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  -webkit-box-flex: 1;
+  flex-grow: 1;
+  background-color: rgb(246, 248, 255);
+  border-radius: 50px;
 }
 .css-1l6c7y9 {
-    display: inherit;
-    margin-right: 8px;
-    margin-left: -4px;
+  display: inherit;
+  margin-right: 8px;
+  margin-left: -4px;
 }
 
 .css-1l6c7y9 > :nth-of-type(1) {
-    font-size: 20px;
+  font-size: 20px;
 }
 .css-1o4lo4k {
-    line-height: normal;
+  line-height: normal;
 }
 
-
-
 .css-1gc0uv4 {
-    padding-left: 64px;
-    padding-right: 64px;
+  padding-left: 64px;
+  padding-right: 64px;
 }
 .css-1gc0uv4 {
-    display: flex;
-    flex-direction: row;
-    gap: 16px;
-    -webkit-box-align: center;
-    align-items: center;
-    margin-top: 32px;
-    padding-bottom: 16px;
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+  -webkit-box-align: center;
+  align-items: center;
+  margin-top: 32px;
+  padding-bottom: 16px;
 }
 .css-5g3ke8 {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    flex: 1 0 auto;
-    z-index: 1200;
-    top: 0px;
-    outline: 0px;
-    right: 0px;
-    box-shadow: rgba(0, 0, 0, 0.08) -2px 0px 8px 0px;
-    background: rgb(255, 255, 255);
-    color: rgb(4, 3, 72);
-    position: absolute;
-    max-height: 100vh;
-    overflow-y: hidden;
-    border: 0px !important;
-    transition: transform 0.2s ease-out 0s !important;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  flex: 1 0 auto;
+  z-index: 1200;
+  top: 0px;
+  outline: 0px;
+  right: 0px;
+  box-shadow: rgba(0, 0, 0, 0.08) -2px 0px 8px 0px;
+  background: rgb(255, 255, 255);
+  color: rgb(4, 3, 72);
+  position: absolute;
+  max-height: 100vh;
+  overflow-y: hidden;
+  border: 0px !important;
+  transition: transform 0.2s ease-out 0s !important;
 }
 
 .parent-container {
@@ -680,52 +672,52 @@ padding: 10px 0px 10px 10px;
   align-items: center; /* Vertical centering */
 }
 
-.added-accordion-css{
-padding:2%;
+.added-accordion-css {
+  padding: 2%;
 }
 
 .css-n776s {
-    line-height: normal;
-    position: relative;
-    top: 1px;
+  line-height: normal;
+  position: relative;
+  top: 1px;
 }
 
 .css-1q1t9mv:hover {
-    background-color: rgb(255, 255, 255);
-    box-shadow: rgba(33, 37, 41, 0.16) 1px 2px 5px;
+  background-color: rgb(255, 255, 255);
+  box-shadow: rgba(33, 37, 41, 0.16) 1px 2px 5px;
 }
 .css-1q1t9mv:hover {
-    filter: none;
+  filter: none;
 }
 .css-1q1t9mv:hover {
-    text-decoration: none;
-    background-color: rgba(82, 79, 252, 0.04);
+  text-decoration: none;
+  background-color: rgba(82, 79, 252, 0.04);
 }
-
 
 .made-with {
-    background: #fd264f;
-    color: #000;
-    display: block;
-    font-size: 12px;
-    line-height: 1em;
-    margin: 0;
-    padding: 5px 110px;
-    position: fixed;
-    top: 20px;
-    right: -100px;
-    text-align: center;
-    text-decoration: none;
-    transform: rotate(45deg);
+  background: #fd264f;
+  color: #000;
+  display: block;
+  font-size: 12px;
+  line-height: 1em;
+  margin: 0;
+  padding: 5px 110px;
+  position: fixed;
+  top: 20px;
+  right: -100px;
+  text-align: center;
+  text-decoration: none;
+  transform: rotate(45deg);
 }
 .documentation {
-    color: #fd264f;
+  color: #fd264f;
 }
 button:focus,
 input:focus,
 textarea:focus,
 select:focus {
-  outline: none; }
+  outline: none;
+}
 
 .tabs {
   display: block;
@@ -736,73 +728,87 @@ select:focus {
   -moz-flex-wrap: wrap;
   flex-wrap: wrap;
   margin: 0;
-  overflow: hidden; }
-  .tabs [class^="tab"] label,
-  .tabs [class*=" tab"] label {
-  background: #E6E6ED;
-    color: #373450;
-    cursor: pointer;
-    display: block;
-    font-weight: 400;
-    line-height: 1em;
-    padding: 1rem 0;
-    text-align: center; }
-  .tabs [class^="tab"] [type="radio"],
-  .tabs [class*=" tab"] [type="radio"] {
-    border-bottom: 1px solid rgba(239, 237, 239, 0.5);
-    cursor: pointer;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    display: block;
-    width: 100%;
-    -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out; }
-    .tabs [class^="tab"] [type="radio"]:hover, .tabs [class^="tab"] [type="radio"]:focus,
-    .tabs [class*=" tab"] [type="radio"]:hover,
-    .tabs [class*=" tab"] [type="radio"]:focus {
-      border-bottom: 1px solid #fd264f; }
-    .tabs [class^="tab"] [type="radio"]:checked,
-    .tabs [class*=" tab"] [type="radio"]:checked {
-      border-bottom: 2px solid #fd264f; }
-    .tabs [class^="tab"] [type="radio"]:checked + div,
-    .tabs [class*=" tab"] [type="radio"]:checked + div {
-      opacity: 1; }
-    .tabs [class^="tab"] [type="radio"] + div,
-    .tabs [class*=" tab"] [type="radio"] + div {
-      display: block;
-      opacity: 0;
-      padding: 2rem 0;
-      width: 90%;
-      -webkit-transition: all 0.3s ease-in-out;
-      -moz-transition: all 0.3s ease-in-out;
-      -o-transition: all 0.3s ease-in-out;
-      transition: all 0.3s ease-in-out; }
-  .tabs .tab-2 {
-    width: 50%; }
-    .tabs .tab-2 [type="radio"] + div {
-      width: 200%;
-      margin-left: 200%; }
-    .tabs .tab-2 [type="radio"]:checked + div {
-      margin-left: 0; }
-    .tabs .tab-2:last-child [type="radio"] + div {
-      margin-left: 100%; }
-    .tabs .tab-2:last-child [type="radio"]:checked + div {
-      margin-left: -100%; }
+  overflow: hidden;
+}
+.tabs [class^="tab"] label,
+.tabs [class*=" tab"] label {
+  background: #e6e6ed;
+  color: #373450;
+  cursor: pointer;
+  display: block;
+  font-weight: 400;
+  line-height: 1em;
+  padding: 1rem 0;
+  text-align: center;
+}
+.tabs [class^="tab"] [type="radio"],
+.tabs [class*=" tab"] [type="radio"] {
+  border-bottom: 1px solid rgba(239, 237, 239, 0.5);
+  cursor: pointer;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  display: block;
+  width: 100%;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+.tabs [class^="tab"] [type="radio"]:hover,
+.tabs [class^="tab"] [type="radio"]:focus,
+.tabs [class*=" tab"] [type="radio"]:hover,
+.tabs [class*=" tab"] [type="radio"]:focus {
+  border-bottom: 1px solid #fd264f;
+}
+.tabs [class^="tab"] [type="radio"]:checked,
+.tabs [class*=" tab"] [type="radio"]:checked {
+  border-bottom: 2px solid #fd264f;
+}
+.tabs [class^="tab"] [type="radio"]:checked + div,
+.tabs [class*=" tab"] [type="radio"]:checked + div {
+  opacity: 1;
+}
+.tabs [class^="tab"] [type="radio"] + div,
+.tabs [class*=" tab"] [type="radio"] + div {
+  display: block;
+  opacity: 0;
+  padding: 2rem 0;
+  width: 90%;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+.tabs .tab-2 {
+  width: 50%;
+}
+.tabs .tab-2 [type="radio"] + div {
+  width: 200%;
+  margin-left: 200%;
+}
+.tabs .tab-2 [type="radio"]:checked + div {
+  margin-left: 0;
+}
+.tabs .tab-2:last-child [type="radio"] + div {
+  margin-left: 100%;
+}
+.tabs .tab-2:last-child [type="radio"]:checked + div {
+  margin-left: -100%;
+}
 
-.add-extra-css{
-box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 4px -1px, rgba(0, 0, 0, 0.14) 0px 4px 5px 0px, rgba(0, 0, 0, 0.12) 0px 1px 10px 0px;
+.add-extra-css {
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 4px -1px,
+    rgba(0, 0, 0, 0.14) 0px 4px 5px 0px, rgba(0, 0, 0, 0.12) 0px 1px 10px 0px;
 }
-.highlighted{
+.highlighted {
   background-color: #d3a655;
-   color: white;
-   font-weight:bold;
-   border-radius:4px;
-   padding-right: 5px;
-    padding-left: 5px;
+  color: white;
+  font-weight: bold;
+  border-radius: 4px;
+  padding-right: 5px;
+  padding-left: 5px;
 }
-.accordion-button{
-display:inline!important;
+.accordion-button {
+  display: inline !important;
 }
