--- a/templates/admin/interview_analyzer/view_report.html
+++ b/templates/admin/interview_analyzer/view_report.html
@@ -385,11 +385,11 @@ for (let i = 0; i < accordion.length; i++) {
                       {% set colorval_text_dur_report = '#b90015' %}
                     {% endif %}
 
-                    {% if video_report.audio_report|emotion_scores|int > 50 %}
+                    {% if video_report.audio_report|emotion_scores_audio|float > 50 %}
                       {% set colorval_audio_report = '#10982c' %}
-                    {% elif video_report.audio_report|emotion_scores|int > 33 and video_report.audio_report|emotion_scores|int < 50 %}
+                    {% elif video_report.audio_report|emotion_scores_audio|float > 33 and video_report.audio_report|emotion_scores_audio|float < 50 %}
                       {% set colorval_audio_report = '#d3a655' %}
-                    {% elif video_report.audio_report|emotion_scores|int < 33 %}
+                    {% elif video_report.audio_report|emotion_scores_audio|float < 33 %}
                       {% set colorval_audio_report = '#b90015' %}
                     {% endif %}
 
@@ -443,11 +443,11 @@ for (let i = 0; i < accordion.length; i++) {
                       {% set colorval_text_dur_report = '#b90015' %}
                     {% endif %}
 
-                    {% if video_report.audio_report|emotion_scores|int > 50 %}
+                    {% if video_report.audio_report|emotion_scores_audio|int > 50 %}
                       {% set colorval_audio_report = '#10982c' %}
-                    {% elif video_report.audio_report|emotion_scores|int > 33 and video_report.audio_report|emotion_scores|int < 50 %}
+                    {% elif video_report.audio_report|emotion_scores_audio|int > 33 and video_report.audio_report|emotion_scores_audio|int < 50 %}
                       {% set colorval_audio_report = '#d3a655' %}
-                    {% elif video_report.audio_report|emotion_scores|int < 33 %}
+                    {% elif video_report.audio_report|emotion_scores_audio|int < 33 %}
                       {% set colorval_audio_report = '#b90015' %}
                     {% endif %}
 
@@ -508,11 +508,11 @@ for (let i = 0; i < accordion.length; i++) {
                       {% set colorval_text_dur_report = '#b90015' %}
                     {% endif %}
 
-                    {% if video_report.audio_report|emotion_scores|int > 50 %}
+                    {% if video_report.audio_report|emotion_scores_audio|int > 50 %}
                       {% set colorval_audio_report = '#10982c' %}
-                    {% elif video_report.audio_report|emotion_scores|int > 33 and video_report.audio_report|emotion_scores|int < 50 %}
+                    {% elif video_report.audio_report|emotion_scores_audio|int > 33 and video_report.audio_report|emotion_scores_audio|int < 50 %}
                       {% set colorval_audio_report = '#d3a655' %}
-                    {% elif video_report.audio_report|emotion_scores|int < 33 %}
+                    {% elif video_report.audio_report|emotion_scores_audio|int < 33 %}
                       {% set colorval_audio_report = '#b90015' %}
                     {% endif %}
 
